--- a/find.html
+++ b/find.html
@@ -37,17 +37,17 @@
     </header>
 
     <main class="main-screen">
-      <div class="find-icons">
-        <div class="find-icons__icons">
+      <div class="icon-row">
+        <div class="icon-row__icons">
           <i class="fa-solid fa-qrcode"></i><span>QR Code</span>
         </div>
-        <div class="find-icons__icons">
+        <div class="icon-row__icons">
           <i class="fa-regular fa-address-book"></i><span>Add by Contacts</span>
         </div>
-        <div class="find-icons__icons">
+        <div class="icon-row__icons">
           <i class="fa-solid fa-fingerprint"></i><span>Add by ID</span>
         </div>
-        <div class="find-icons__icons">
+        <div class="icon-row__icons">
           <i class="fa-regular fa-envelope"></i><span>Invite</span>
         </div>
       </div>
@@ -75,7 +75,16 @@
               <span class="open-post__member-status">Active</span>
             </div>
           </div>
-          <div class="open-post__column"></div>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img
+                src="https://img5.yna.co.kr/photo/cms/2023/03/16/84/PCM20230316000184990_P4.jpg"
+              />
+              <div class="open-post__heart-count">
+                <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
@@ -106,6 +115,9 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/7fc8640636.js"
       crossorigin="anonymous"
