--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <input type="submit" value="Sign up" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/7fc8640636.js"
       crossorigin="anonymous"
