--- a/more.html
+++ b/more.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Kokoa Talk</title>
+    <title>More - Kokoa Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -25,21 +25,19 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span
+          ><a href="settings.html"
+            ><i class="fa-solid fa-gear fa-lg screen-header__gear"> </i
+          ></a>
+        </span>
       </div>
     </header>
 
-    <a id="friends-display-link">
-      <i class="fa-solid fa-circle-info"></i>
-      Friends' Names Display
-      <i class="fa-solid fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
+    <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -48,32 +46,43 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__title">Jinsoo</h4>
-            <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
-          </div>
-        </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fa-solid fa-chevron-up fa-xs"></i>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://img5.yna.co.kr/photo/cms/2023/03/16/84/PCM20230316000184990_P4.jpg"
-            class="user-component__avatar user-component__avatar--sm"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title user-component__title--not-bold">
-              Channel
-            </h4>
+            <h6 class="user-component__subtitle">
+              + 787 666 999 <span><i class="fa-solid fa-exclamation"></i></span>
+            </h6>
           </div>
         </div>
         <div class="user-component__column">
-          <div>
-            <span>2</span><i class="fa-solid fa-chevron-right fa-xs"></i>
+          <i class="fa-regular fa-message fa-2x"></i>
+        </div>
+      </div>
+      <div class="icon-row">
+        <div class="icon-row__icons">
+          <i class="fa-regular fa-calendar"></i><span>Calendar</span>
+        </div>
+        <div class="icon-row__icons">
+          <i class="fa-regular fa-face-smile-beam"></i><span>Emoticons</span>
+        </div>
+        <div class="icon-row__icons">
+          <i class="fa-solid fa-paint-roller"></i><span>Themes</span>
+        </div>
+        <div class="icon-row__icons">
+          <i class="fa-solid fa-file-invoice-dollar"></i><span>Account</span>
+        </div>
+      </div>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
           </div>
         </div>
       </div>
@@ -83,13 +92,13 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html">
-            <i class="fa-solid fa-user fa-2x"></i>
+            <i class="far fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-regular fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
@@ -99,16 +108,12 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <div class="nav__update"></div>
+            <div class="nav__update badge__dot"></div>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
         </li>
       </ul>
     </nav>
-    <div id="splash-screen">
-      <i class="fas fa-comment"></i>
-    </div>
-
     <div id="no-mobile">
       <span>Your screen is too big ㅠㅠ</span>
     </div>
