--- a/more.html
+++ b/more.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>More - Kokoa Talk</title>
+    <title>More - Soul Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -18,7 +18,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>11%</span>
+        <span>22%</span>
         <i class="fa-solid fa-battery-quarter fa-xl"></i>
         <i class="fa-sharp fa-solid fa-bolt"></i>
       </div>
@@ -41,11 +41,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://img5.yna.co.kr/photo/cms/2023/03/16/84/PCM20230316000184990_P4.jpg"
+            src="https://cdn.epicstream.com/images/ncavvykf/epicstream/0bdfb334bdaa4c029d195f1976a27676e986ceb3-800x800.png?w=328&h=328&auto=format"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Jinsoo</h4>
+            <h4 class="user-component__title">22</h4>
             <h6 class="user-component__subtitle">
               + 787 666 999 <span><i class="fa-solid fa-exclamation"></i></span>
             </h6>
@@ -76,13 +76,7 @@
             <div class="more-suggestions__icon-image">
               <i class="fa-solid fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
-          </div>
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fa-solid fa-quote-right"></i>
-            </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">Soul Story</span>
           </div>
         </div>
       </div>
@@ -115,7 +109,7 @@
       </ul>
     </nav>
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big 😅</span>
     </div>
     <script
       src="https://kit.fontawesome.com/7fc8640636.js"
