--- a/chat.html
+++ b/chat.html
@@ -18,7 +18,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>11%</span>
+        <span>22%</span>
         <i class="fa-solid fa-battery-quarter fa-xl"></i>
         <i class="fa-sharp fa-solid fa-bolt"></i>
       </div>
@@ -31,7 +31,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">Joe Gardner</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
@@ -43,12 +43,12 @@
       <div class="chat__timestamp">Tuesday, June 30, 2020</div>
       <div class="message-row">
         <img
-          src="https://img5.yna.co.kr/photo/cms/2023/03/16/84/PCM20230316000184990_P4.jpg"
+          src="https://static.wikia.nocookie.net/disney/images/3/31/Profile_-_Joe_Gardner.png"
         />
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
+          <span class="message__author">Joe Gardner</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble">You ready?</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -56,7 +56,46 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Hi nice to meet you!</span>
+            <span class="message__bubble">Huh?</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row">
+        <img
+          src="https://static.wikia.nocookie.net/disney/images/3/31/Profile_-_Joe_Gardner.png"
+        />
+        <div class="message-row__content">
+          <span class="message__author">Joe Gardner</span>
+          <div class="message__info">
+            <span class="message__bubble">…to come live…</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble"
+              >I’m scared, Joe. I’m not good enough. Anyway, I never got my
+              spark.</span
+            >
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row">
+        <img
+          src="https://static.wikia.nocookie.net/disney/images/3/31/Profile_-_Joe_Gardner.png"
+        />
+        <div class="message-row__content">
+          <span class="message__author">Joe Gardner</span>
+          <div class="message__info">
+            <span class="message__bubble"
+              >Yes you did. Your spark isn’t your purpose. That last box fills
+              in when you’re ready to come live. And the thing is, you’re pretty
+              great at jazzing.</span
+            >
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -76,7 +115,7 @@
       </div>
     </form>
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big 😅</span>
     </div>
     <script
       src="https://kit.fontawesome.com/7fc8640636.js"
