--- a/chats.html
+++ b/chats.html
@@ -18,7 +18,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>11%</span>
+        <span>22%</span>
         <i class="fa-solid fa-battery-quarter fa-xl"></i>
         <i class="fa-sharp fa-solid fa-bolt"></i>
       </div>
@@ -30,7 +30,9 @@
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span>
+          <a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a>
+        </span>
       </div>
     </header>
 
@@ -39,13 +41,13 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://img5.yna.co.kr/photo/cms/2023/03/16/84/PCM20230316000184990_P4.jpg"
+              src="https://static.wikia.nocookie.net/disney/images/3/31/Profile_-_Joe_Gardner.png"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Jinsoo</h4>
+              <h4 class="user-component__title">Joe Gardner</h4>
               <h6 class="user-component__subtitle">
-                Please check My Kokoa Account Info
+                ....you’re pretty great at jazzing.
               </h6>
             </div>
           </div>
@@ -84,7 +86,7 @@
       </ul>
     </nav>
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big 😅</span>
     </div>
     <script
       src="https://kit.fontawesome.com/7fc8640636.js"
