--- a/find.html
+++ b/find.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Talk</title>
+    <title>Find - Soul Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -18,7 +18,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>11%</span>
+        <span>22%</span>
         <i class="fa-solid fa-battery-quarter fa-xl"></i>
         <i class="fa-sharp fa-solid fa-bolt"></i>
       </div>
@@ -29,9 +29,10 @@
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span>
-          <i class="fa-solid fa-gear fa-lg screen-header__gear">
-            <div class="screen-header__update badge__dot"></div>
-          </i>
+          <div class="screen-header__update badge__dot"></div>
+          <a href="settings.html">
+            <i class="fa-solid fa-gear fa-lg screen-header__gear"> </i>
+          </a>
         </span>
       </div>
     </header>
@@ -64,11 +65,11 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#TheGreatBefore</h5>
+            <h6 class="open-post__hashtags">#soul#possibilities#spark</h6>
             <div class="open-post__members">
               <img
-                src="https://img5.yna.co.kr/photo/cms/2023/03/16/84/PCM20230316000184990_P4.jpg"
+                src="https://d26oc3sg82pgk3.cloudfront.net/files/media/edit/image/43148/square_thumb%402x.jpg"
               />
               <span class="open-post__member-count">802 members</span>
               <div class="divider"></div>
@@ -78,7 +79,7 @@
           <div class="open-post__column">
             <div class="open-post__photo">
               <img
-                src="https://img5.yna.co.kr/photo/cms/2023/03/16/84/PCM20230316000184990_P4.jpg"
+                src="https://d26oc3sg82pgk3.cloudfront.net/files/media/edit/image/43148/square_thumb%402x.jpg"
               />
               <div class="open-post__heart-count">
                 <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
@@ -116,7 +117,7 @@
       </ul>
     </nav>
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big 😅</span>
     </div>
     <script
       src="https://kit.fontawesome.com/7fc8640636.js"
