--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome to Soul Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -18,15 +18,16 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>11%</span>
+        <span>22%</span>
         <i class="fa-solid fa-battery-quarter fa-xl"></i>
         <i class="fa-sharp fa-solid fa-bolt"></i>
       </div>
     </div>
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <h1 class="welcome-header__title">Welcome to Soul Talk</h1>
       <p class="welcome-header__text">
-        If you have a Kakao Account, log in with your email or phone number.
+        If you have a Soul Account,<br />
+        log in with your email or phone number.
       </p>
     </header>
     <form action="friends.html" method="get" id="login-form">
@@ -34,10 +35,10 @@
       <input name="password" type="password" placeholder="password" />
       <input type="submit" value="Log In" />
       <input type="submit" value="Sign up" />
-      <a href="#">Find Kokoa Account or Password</a>
+      <a href="#">Find Soul Account or Password</a>
     </form>
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big 😅</span>
     </div>
     <script
       src="https://kit.fontawesome.com/7fc8640636.js"
