--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Settings - Kokoa Talk</title>
+    <title>Settings - Soul Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -18,7 +18,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>11%</span>
+        <span>22%</span>
         <i class="fa-solid fa-battery-quarter fa-xl"></i>
         <i class="fa-sharp fa-solid fa-bolt"></i>
       </div>
@@ -26,7 +26,7 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="more.html">
+        <a href="javascript:history.back();">
           <i class="fa-solid fa-angle-left fa-3x"></i>
         </a>
       </div>
@@ -91,7 +91,7 @@
       </ul>
     </nav>
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big 😅</span>
     </div>
     <script
       src="https://kit.fontawesome.com/7fc8640636.js"
