--- a/chat.html
+++ b/chat.html
@@ -27,7 +27,7 @@
     <header class="alt-header">
       <div class="alt-header__column">
         <a href="chats.html">
-          <i class="fa-solid fa-angle-left fa-3x"></i>
+          <i class="fa-solid fa-angle-left fa-xl"></i>
         </a>
       </div>
       <div class="alt-header__column">
