--- a/find.html
+++ b/find.html
@@ -66,7 +66,7 @@
         <div class="open-post">
           <div class="open-post__column">
             <h5 class="open-post__title">#TheGreatBefore</h5>
-            <h6 class="open-post__hashtags">#soul#possibilities#spark</h6>
+            <h6 class="open-post__hashtags">#possibilities#spark</h6>
             <div class="open-post__members">
               <img
                 src="https://d26oc3sg82pgk3.cloudfront.net/files/media/edit/image/43148/square_thumb%402x.jpg"
